--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -366,35 +366,35 @@ components:
     density: 1
     durability: 1
     price: 1
-    crew_stored: 235
+    crew_served: 235
     morale: -2
   cramped:
     type: living_quarter
     density: 1
     durability: 2
     price: 1
-    crew_stored: 195
+    crew_served: 195
     moreale: -1
   spartan:
     type: living_quarter
     density: 1
     durability: 2
     price: 1
-    crew_stored: 155
+    crew_served: 155
     morale: +0
   decent:
     type: living_quarter
     density: 1
     durability: 3
     price: 2
-    crew_stored: 115
+    crew_served: 115
     morale: +1
   good:
     type: living_quarter
     density: 1
     durability: 3
     price: 2
-    crew_stored: 75
+    crew_served: 75
     morale: +2
 #################### [STORE] ###################
   survival_rations:
