ftl -> ftl_drive

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -459,7 +459,7 @@ components:
         base: 1
 #################### [FTL] ###################
   jump_improvised:
-    type: ftl
+    type: "ftl_drive"
     density: 6
     price: 0.1
     durability: 1
@@ -476,7 +476,7 @@ components:
       base: 2
       multiplier: 20
   jump_rudimentary:
-    type: ftl
+    type: "ftl_drive"
     density: 6
     price: 1
     durability: 1
@@ -493,7 +493,7 @@ components:
       constant: 0
       multiplier: 12.5
   jump_standard:
-    type: ftl
+    type: "ftl_drive"
     density: 8
     price: 4
     durability: 1
@@ -510,7 +510,7 @@ components:
       constant: 0
       multiplier: 25
   jump_tactical:
-    type: ftl
+    type: "ftl_drive"
     density: 10
     price: 10
     durability: 1
@@ -523,7 +523,7 @@ components:
       constant: 0
       multiplier: 16.666666 # rip whoever has to deal with this rounding error
   jump_longrange:
-    type: ftl
+    type: "ftl_drive"
     density: 10
     price: 10
     durability: 1
@@ -536,7 +536,7 @@ components:
       constant: 0
       multiplier: 50
   jump_industrial:
-    type: ftl
+    type: "ftl_drive"
     density: 12
     price: 3
     durability: 1
