--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -57,7 +57,7 @@ components:
 #################### [DRIVE] ###################
   chemical_rocket:
     name: "Chemical Rocket"
-    type: drive
+    type: "engine"
     density: 1
     durability: 1
     price: 0.5
@@ -71,7 +71,7 @@ components:
     works_in_atmo: true
     landing_bad_idea: false
   nuclear_hybrid:
-    type: drive
+    type: "engine"
     density: 3
     durability: 4
     price: 3
@@ -85,7 +85,7 @@ components:
     works_in_atmo: true
     landing_bad_idea: false
   electric_rocket:
-    type: drive
+    type: "engine"
     density: 2
     durability: 2
     price: 1
@@ -98,7 +98,7 @@ components:
         per_volume: 0.1
     works_in_atmo: false
   orion_drive:
-    type: drive
+    type: "engine"
     density: 8
     durability: 20
     price: 6
@@ -112,7 +112,7 @@ components:
     works_in_atmo: true
     landing_bad_idea: true
   mini_mag_orion:
-    type: drive
+    type: "engine"
     density: 5
     durability: 10
     price: 8
@@ -129,7 +129,7 @@ components:
     heat_per_energy: 0.125
     can_idle: false
   fissile_salt_water:
-    type: drive
+    type: "engine"
     density: 6
     durability: 12
     price: 9
@@ -143,7 +143,7 @@ components:
     works_in_atmo: true
     landing_bad_idea: true
   fusion_torch:
-    type: drive
+    type: "engine"
     density: 1
     durability: 1
     price: 12
