--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -399,36 +399,46 @@ components:
     density: 1
     durability: 1
     price: 1
-    crew_served: 235
-    morale: -2
+    modules:
+      quarters:
+        crew: 235
+        morale: -2
   cramped:
     type: living_quarter
     density: 1
     durability: 2
     price: 1
-    crew_served: 195
-    moreale: -1
+    modules:
+      quarters:
+        crew_served: 195
+        moreale: -1
   spartan:
     type: living_quarter
     density: 1
     durability: 2
     price: 1
-    crew_served: 155
-    morale: +0
+    modules:
+      quarters:
+        crew_served: 155
+        morale: +0
   decent:
     type: living_quarter
     density: 1
     durability: 3
     price: 2
-    crew_served: 115
-    morale: +1
+    modules:
+      quarters:
+        crew_served: 115
+        morale: +1
   good:
     type: living_quarter
     density: 1
     durability: 3
     price: 2
-    crew_served: 75
-    morale: +2
+    modules:
+      quarters:
+        crew_served: 75
+        morale: +2
 #################### [STORE] ###################
   survival_rations:
     type: store
