--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -580,15 +580,17 @@ components:
     crew:
       strategic:
         per_volume: 20
-    ftl_method: "jump"
-    jump_tac_tidi: 15
-    jump_tac_energy: 90
-    jump_str_energy: 90
-    jump_range:
-      method: log
-      constant: 0
-      base: 2
-      multiplier: 20
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 15
+        jump_tac_energy: 90
+        jump_str_energy: 90
+        jump_range:
+          method: log
+          constant: 0
+          base: 2
+          multiplier: 20
   jump_rudimentary:
     type: "ftl_drive"
     density: 6
@@ -598,14 +600,16 @@ components:
       strategic:
         base: 10
         per_volume: 4
-    ftl_method: "jump"
-    jump_tac_tidi: 3
-    jump_tac_energy: 60
-    jump_str_energy: 6
-    jump_range:
-      method: linear
-      constant: 0
-      multiplier: 12.5
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 3
+        jump_tac_energy: 60
+        jump_str_energy: 6
+        jump_range:
+          method: linear
+          constant: 0
+          multiplier: 12.5
   jump_standard:
     type: "ftl_drive"
     density: 8
@@ -615,54 +619,62 @@ components:
       strategic:
         base: 5
         per_volume: 2
-    ftl_method: "jump"
-    jump_tac_tidi: 2
-    jump_tac_energy: 50
-    jump_str_energy: 5
-    jump_range:
-      method: linear
-      constant: 0
-      multiplier: 25
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 2
+        jump_tac_energy: 50
+        jump_str_energy: 5
+        jump_range:
+          method: linear
+          constant: 0
+          multiplier: 25
   jump_tactical:
     type: "ftl_drive"
     density: 10
     price: 10
     durability: 1
-    ftl_method: "jump"
-    jump_tac_tidi: 1
-    jump_tac_energy: 80
-    jump_str_energy: 8
-    jump_range:
-      method: linear
-      constant: 0
-      multiplier: 16.666666 # rip whoever has to deal with this rounding error
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 1
+        jump_tac_energy: 80
+        jump_str_energy: 8
+        jump_range:
+          method: linear
+          constant: 0
+          multiplier: 16.666666 # rip whoever has to deal with this rounding error
   jump_longrange:
     type: "ftl_drive"
     density: 10
     price: 10
     durability: 1
-    ftl_method: "jump"
-    jump_tac_tidi: 4
-    jump_tac_energy: 60
-    jump_str_energy: 6
-    jump_range:
-      method: linear
-      constant: 0
-      multiplier: 50
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 4
+        jump_tac_energy: 60
+        jump_str_energy: 6
+        jump_range:
+          method: linear
+          constant: 0
+          multiplier: 50
   jump_industrial:
     type: "ftl_drive"
     density: 12
     price: 3
     durability: 1
-    ftl_method: "jump"
-    jump_tac_tidi: 3
-    jump_tac_energy: 45
-    jump_str_energy: 4.5
-    jump_range:
-      method: log
-      constant: 0
-      base: 4.5
-      multiplier: 45
+    modules:
+      ftl_drive:
+        ftl_method: "jump"
+        jump_tac_tidi: 3
+        jump_tac_energy: 45
+        jump_str_energy: 4.5
+        jump_range:
+          method: log
+          constant: 0
+          base: 4.5
+          multiplier: 45
 #################### [WEAPON_DIRECT] ###################
   macron_gun:
     type: weapon_direct
