--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -410,7 +410,7 @@ components:
     price: 1
     modules:
       quarters:
-        crew_served: 195
+        crew: 195
         moreale: -1
   spartan:
     type: living_quarter
@@ -419,7 +419,7 @@ components:
     price: 1
     modules:
       quarters:
-        crew_served: 155
+        crew: 155
         morale: +0
   decent:
     type: living_quarter
@@ -428,7 +428,7 @@ components:
     price: 2
     modules:
       quarters:
-        crew_served: 115
+        crew: 115
         morale: +1
   good:
     type: living_quarter
@@ -437,7 +437,7 @@ components:
     price: 2
     modules:
       quarters:
-        crew_served: 75
+        crew: 75
         morale: +2
 #################### [STORE] ###################
   survival_rations:
