--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -214,13 +214,23 @@ components:
           HEAT: 10
   pebble_bed:
     type: powerplant
-    __incomplete: 1
+    density: 4
+    durability: 8
+    price: 3
+    modules:
+      crew:
+        strategic:
+          base: 3
+          per_volume: 1
+      converter:
+        output:
+          ENERGY: 18
+          HEAT: 54
   fission_fragment:
     type: powerplant
     density: 3
     durability: 2
     price: 5
-    power_per: 32
     modules:
       crew:
         strategic:
@@ -232,7 +242,19 @@ components:
           HEAT: 1
   magneto_inertial:
     type: powerplant
-    __incomplete: 1
+    density: 4
+    durability: 2
+    price: 5
+    modules:
+      crew:
+        strategic:
+          base: 7
+          per_volume: 2
+      converter:
+        generator:
+          output:
+            ENERGY: 35
+            HEAT: 245
   electrostatic_fusion:
     type: powerplant
     __incomplete: 1
@@ -571,6 +593,15 @@ components:
         operate_offensive: true
         operate_defensive: true
         operate_navigation: true
+      buff:
+        method: "flat"
+        stacks: false
+        ecm: +2
+        sensors: +2
+        acceleration: +1
+      #TODO jump energy buff
+      #TODO evasion buff
+
 #################### [FTL] ###################
   jump_improvised:
     type: "ftl_drive"
