--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -594,7 +594,7 @@ components:
         operate_defensive: true
         operate_navigation: true
       buff:
-        stacks: false
+        scaling_function: 1
         add:
           ecm: +2
           sensors: +2
@@ -773,3 +773,27 @@ components:
     density: 4
     durability: 4
     price: 5
+#################### [EWAR] ###################
+  sensors:
+    type: ewar
+    density: 3
+    durability: 3
+    price: 4
+    modules:
+      buff:
+        scaling_function: volume
+        add:
+          sensors: +1
+        multiply:
+          foo: 1.8
+          bar: 0.5
+  ecm:
+    type: ewar
+    density: 3
+    durability: 3
+    price: 4
+    modules:
+      buff:
+        scaling_function: volume
+        add:
+          raw_ecm: 1
