--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -69,11 +69,11 @@ components:
         fuel_flow: 10
         works_in_atmo: true
         landing_bad_idea: false
-  nuclear_hybrid:
+  thermal_rocket:
     type: "engine"
-    density: 3
-    durability: 4
-    price: 3
+    density: 1
+    durability: 5
+    price: 1
     modules:
       crew:
         strategic:
@@ -82,7 +82,7 @@ components:
       engine:
         thrust: 250
         fuel: "inert_fluid"
-        fuel_flow: 4
+        fuel_flow: 2.5
         works_in_atmo: true
         landing_bad_idea: false
   electric_rocket:
@@ -114,7 +114,7 @@ components:
       engine:
         thrust: 350
         fuel: "nuclear_bombs"
-        fuel_flow: 1
+        fuel_flow: 0.5
         works_in_atmo: true
         landing_bad_idea: true
   mini_mag_orion:
@@ -129,12 +129,13 @@ components:
           per_volume: 2
       engine:
         thrust: 275
-        fuel: "nuclear_bombs"
-        fuel_flow: 0.5
+        fuel: "fissile_pellets"
+        fuel_flow: 0.25
+        works_in_atmo: false
       converter:
         output:
           ENERGY: 16
-          HEAT: 2
+          HEAT: 4
   fissile_salt_water:
     type: "engine"
     density: 6
@@ -148,7 +149,7 @@ components:
       engine:
         thrust: 450
         fuel: "dissolved_fissiles"
-        fuel_flow: 1.5
+        fuel_flow: 0.75
         works_in_atmo: true
         landing_bad_idea: true
   fusion_torch:
@@ -162,14 +163,14 @@ components:
           base: 8
           per_volume: 2
       engine:
-        thrust: 450
+        thrust: 225
         fuel: "d3he"
         fuel_flow: 0.05
         works_in_atmo: false
       converter:
         output: 
           ENERGY: 12
-          HEAT: 2
+          HEAT: 3
 
 #################### [POWERPLANT] ###################
   fuel_cell:
