Update resources to latest version

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -20,13 +20,12 @@ resources:
     storeable: true
     density: 5
     price: 1
-    hazards:
-      hazard_leak: true
+    hazards: null
   nuclear_bombs:
     name: "Nuclear Bombs"
     storeable: true
     density: 10
-    price: 2
+    price: 12
     hazards:
       terrorist_theft: true
   fissile_pellets:
@@ -41,6 +40,7 @@ resources:
     density: 12
     price: 9
     hazards:
+      hazard_leak: true
       critical_leak: true
   d3he:
     name: "D3He"
