--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,9 @@ stages:
 
 yaml-correctness-validation-job:
   stage: validate
+  image: python
   script:
     - echo "Checking YAML correctness"
-    - ruby -ryaml -e "p YAML.load(STDIN.read)" < junctspace_dump.yaml
+    - pip install pyyaml
+    - python -c 'import yaml, sys; print(yaml.safe_load(sys.stdin))' < junctspace_dump.yaml
     - echo "YAML correctness checked."
