remove prints from job; more generic name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,9 @@
 stages:
   - validate
 
-yaml-correctness-validation-job:
+validate-yaml:
   stage: validate
   image: python:3
   script:
-    - echo "Checking YAML correctness"
     - pip install pyyaml
-    - python -c 'import yaml, sys; print(yaml.safe_load(sys.stdin))' < junctspace_dump.yaml
-    - echo "YAML correctness checked."
+    - python -c 'import yaml, sys; yaml.safe_load(sys.stdin)' < junctspace_dump.yaml
