--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -799,17 +799,29 @@ components:
     durability: 3
     price: 4
     modules:
+      crew:
+        strategic:
+          base: 4
+          per_volume: 2
       buff:
         scaling_function: volume
         add:
           sensors: +1
+        active:
+          ENERGY: -3
   ecm:
     type: ewar
     density: 3
     durability: 3
     price: 4
     modules:
+      crew:
+        strategic:
+          base: 4
+          per_volume: 2
       buff:
         scaling_function: volume
         add:
           raw_ecm: 1
+        active:
+          ENERGY: -3
