--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -65,8 +65,8 @@ components:
           per_volume: 1
       engine:
         thrust: 275
-        fuel: "chemical_fuel"
-        fuel_flow: 10
+        fuel: 
+          "chemical_fuel": 10
         works_in_atmo: true
         landing_bad_idea: false
   thermal_rocket:
@@ -81,8 +81,9 @@ components:
           per_volume: 1
       engine:
         thrust: 250
-        fuel: "inert_fluid"
-        fuel_flow: 2.5
+        fuel:
+          "inert_fluid": 5
+          "HEAT": 10
         works_in_atmo: true
         landing_bad_idea: false
   electric_rocket:
@@ -97,10 +98,23 @@ components:
           per_volume: 0.1
       engine:
         thrust: 40
-        fuel: "inert_fluid"
-        fuel_flow: 0.025
+        fuel:
+          "inert_fluid": 0.025
+          ENERGY: 10
         works_in_atmo: true
         landing_bad_idea: false
+  thermo_electric_rocket:
+    type: "engine"
+    density: 1
+    durability: 4
+    price: 2
+    modules:
+      engine:
+        thrust: 250
+        fuel:
+          "inert_fluid": 2.5
+          HEAT: 5
+          ENERGY: 10
   orion_drive:
     type: "engine"
     density: 8
@@ -113,8 +127,8 @@ components:
           per_volume: 3
       engine:
         thrust: 350
-        fuel: "nuclear_bombs"
-        fuel_flow: 0.5
+        fuel:
+          "nuclear_bombs": 0.5
         works_in_atmo: true
         landing_bad_idea: true
   mini_mag_orion:
@@ -129,13 +143,12 @@ components:
           per_volume: 2
       engine:
         thrust: 275
-        fuel: "fissile_pellets"
-        fuel_flow: 0.25
-        works_in_atmo: false
-      converter:
-        output:
+        fuel:
+          "fissile_pellets": 0.25
+        alternator:
           ENERGY: 16
-          HEAT: 4
+          HEAT: 2
+        works_in_atmo: false
   fissile_salt_water:
     type: "engine"
     density: 6
@@ -148,8 +161,8 @@ components:
           per_volume: 8
       engine:
         thrust: 450
-        fuel: "dissolved_fissiles"
-        fuel_flow: 0.75
+        fuel:
+          "dissolved_fissiles": 0.75
         works_in_atmo: true
         landing_bad_idea: true
   fusion_torch:
@@ -164,8 +177,8 @@ components:
           per_volume: 2
       engine:
         thrust: 225
-        fuel: "d3he"
-        fuel_flow: 0.05
+        fuel:
+          "d3he": 0.05
         works_in_atmo: false
       converter:
         output: 
