--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -773,31 +773,81 @@ components:
     density: 5
     durability: 3
     price: 3
+    modules:
+      crew:
+        strategic:
+          base: 4
+          per_volume: 2
+      converter:
+        input:
+          ENERGY: 1
+    __incomplete: 1
   light_magazine:
     type: weapon_guided
     density: 5
     durability: 4
     price: 2
+    modules:
+      crew:
+        strategic:
+          base: 3
+          per_volume: 1
+        converter:
+          input:
+            ENERGY: 1
+    __incomplete: 1
   light_em_catapult:
     type: weapon_guided
     density: 3
     durability: 3
     price: 4
+    modules:
+      crew:
+        strategic:
+          base: 5
+          per_volume: 1
+        converter:
+          input:
+            ENERGY: 4
   heavy_vls:
     type: weapon_guided
     density: 5
     durability: 3
     price: 3
+    modules:
+      crew:
+        strategic:
+          base: 3
+          per_volume: 2
+        converter:
+          input:
+            ENERGY: 1
   heavy_magazine:
     type: weapon_guided
     density: 5
     durability: 4
     price: 2
+    modules:
+      crew:
+        strategic:
+          base: 2
+          per_volume: 1
+        converter:
+          input:
+            ENERGY: 1
   heavy_em_catapult:
     type: weapon_guided
     density: 4
     durability: 4
     price: 5
+    modules:
+      crew:
+        strategic:
+          base: 5
+          per_volume: 1
+        converter:
+          input:
+            ENERGY: 8
 #################### [EWAR] ###################
   sensors:
     type: ewar
